testdata/error/zero_posting_with_lot.ledger.error.txt
error: posting without commodity should not have exchange
 --> /okane/testdata/error/zero_posting_with_lot.ledger:4:54
  |
3 | 2024/09/01 Shop
4 |     Expenses                                       0 { 1 USD }
  |                                                      ^^^^^^^^^ absolute zero posting should not have exchange
5 |     Assets:Banks
  |
